# Tempify

./: README.md  makefile
src/main/cpp/: main.cpp
templates/bazle_default_java/src/src/: BUILD  WORKSPACE
templates/bazle_default_java/src/src/main/java/%%package%%/: App.java
templates/cmake_default_cpp/src/: CMakeLists.txt
templates/cmake_default_cpp/src/src/: main.cpp
templates/cpp_project/: meta.csv  prompts.lua  template.lua
templates/cpp_project/src/: makefile
templates/gradle_default/src/: build.gradle.kts  settings.gradle.kts
templates/gradle_default/src/src/main/java/%%package%%/: App.java
templates/gradle_default/src/src/test/java/%%package%%/: AppTest.java
templates/makefile_default_cpp/src/: Makefile
templates/makefile_default_cpp/src/src/: app.cpp  main.cpp
templates/maven_default/src/: pom.xml
templates/maven_default/src/src/main/java/%%package%%/: App.java
templates/maven_default/src/src/test/java/%%package/: AppTest.java
templates/nexis_default_cpp/src/: build.lua
